2005-09-10  Titus Brown  <t@issola.caltech.edu>

	* Updated version to 0.7.2.  RELEASE.

	* Updated setup.py to contain full Pypi info & Trove classification.

	* Made sure current directory was in sys.path on load;
	  useful for extend_with!

	* Added debug http functionality.

	* Added save_html <filename>.

2005-09-03  Titus Brown  <t@issola.caltech.edu>

	* Fixed extend_with to update the interactive shell.
	
2005-08-20  Titus Brown  <t@issola.caltech.edu>

	* Updated pyparsing.py to 1.3.2.

2005-06-08  Titus Brown  <t@issola.caltech.edu>

	* Added 'add_auth' command for HTTP basic authentication.

	* Added 'formfile' command for file uploads.

	* Added 'test/README.txt' for testing docs.

	* Applied Joeri van Ruth's patch to make '-' as a filename
	  read from stdin.

2005-06-06  Titus Brown  <t@issola.caltech.edu>

	* Now checks for exact matches to fieldnames before trying out
	  regexps.

	* Submit w/o submit buttons now working.

	* Fixed quoted handling of __stuff__.

	* More intelligent pyparsing stuff from Paul McGuire; in particular,
	  comments on the ends of lines are allowed, and '#' in arguments
	  is disallowed.

2005-06-04  Titus Brown  <t@issola.caltech.edu>

	* added a couple of command line options using 'optparse'.

	* added __url__ ==> current URL.

	* added some of Paul McGuire's suggestions for cleaning up the
	  pyparsing code.

	* better error reporting on all exceptions while executing
	  file.

	* Fixed a relative URL issue: twill now tries several URLs in order,
	  only prepending 'http://' when it's tried other URLs first.  Added
	  test.

	* Added Joeri van Ruth's patches: new sleep command, and transmit
	  value of submit buttons on form submission.  Added tests for the
	  latter.  Documented.

2005-05-26  Titus Brown  <t@issola.caltech.edu>

	* all files specified on command-line now executed.

	* emacs backup files (filename~) now skipped by twill-sh.

	* error output on script execution now includes line number &
	filename.
