@@ -156,6 +156,9 @@ click may be recorded for use by <strong>submit</strong>, but the value is not c
 global dictionary</p>
 <p><strong>setlocal</strong> <em>&lt;name&gt; &lt;value&gt;</em> -- set variable &lt;name&gt; to value &lt;value&gt; in
 local dictionary</p>
+<p>The local dictionary is file-specific, while the global module is general
+to all the commands.  Local variables will override global variables if
+they exist.</p>
 </div>
 <div class="section" id="other-commands">
 <h2><a class="toc-backref" href="#id11" name="other-commands">Other commands</a></h2>
@@ -327,6 +330,7 @@ special test script, whatever.)</li>
 <li>execute directories/directory trees?</li>
 <li>record scripts</li>
 <li>add debug response, others?</li>
+<li>systematize variable handling a bit better: __ vs $</li>
 </ol>
 </blockquote>
 <p>Longer term fixes &amp; cleanups:</p>
@@ -353,7 +357,7 @@ mechanize.  Michele Simionato is an early adopter who has helped quite
 a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, and Elvelind Grandin.</p>
-<p>Patches have been submitted by: Joeri van Ruth and Paul McGuire.</p>
+<p>Patches have been submitted by: Joeri van Ruth, Paul McGuire, and Ed Rahn.</p>
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
 Last updated September '05.</p>
 </div>
