@@ -1,3 +1,15 @@
+2005-09-18  Titus Brown  <t@issola.caltech.edu>
+
+	* Created namespaces.py, moved local/global dictionary stuff in
+	  there.  Created local namespace stack; namespaces now mean
+	  something ;).
+
+	* Added setglobal and setlocal, then agonized about local/global
+	  dictionaries.
+
+	* Added Ed Rahn's patch: run, runfile, and $variable substition.
+	  Documented appropriately.
+
 2005-09-10  Titus Brown  <t@issola.caltech.edu>
 
 	* Updated version to 0.7.2.  RELEASE.
